Docs: Fix wrapping

--- a/Website/src/pages/index.module.css
+++ b/Website/src/pages/index.module.css
@@ -163,7 +163,8 @@
   }
 
   .downloadButtonContainer {
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
   }
 }
